# GADES

./: .gitignore  404.html  README.md  index.html  license  objects.inv  plan.md  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
GADES/: __init__.py  backend.py  bofill.py  config.py  eigval_nn.py  fdiff_testbench.ipynb  gades.py  hvp.py  lanczos.py  potentials.py  testbench.py  utils.py
GADES/SurfAnalysis/: __init__.py  clustering.py  features.py  preprocessing.py
benchmarks/: hvp_scaling.py
docs/: mkdocs.yml
docs/docs/: index.md
examples/: index.html
examples/ADP_NumHess/: production.py  viz.ipynb
examples/AIB9/: aib9.gro  index.html  production.py  topol.top  visualization.ipynb
examples/Alanine Dipeptide/: ADP-gad.ipynb
examples/AlanineDipeptide/: ADP-gad-sachar.ipynb  ADP-gad.ipynb  ADP-gades-memBofill.ipynb  ADP-postprocess.ipynb  README
examples/AlanineDipeptide-debug/: README.md  equilibrate.py  initialize.py  master.py  minimize.py  production.py  scalars.csv
examples/BluePrint/: sys_example.py  sys_example2.py
examples/Chignolin-debug/: README.md  master.py  production.py  scalars.csv  traj.dcd
guides/: index.html
search/: search_index.json
stylesheets/: extra.css
temp/: ADP_lanczos_temp.ipynb  jvp_test.ipynb  lanczos.py
tests/: README.md  __init__.py  conftest.py  test_backend.py  test_bofill.py  test_gades.py  test_hvp.py  test_integration.py  test_lanczos.py  test_sign_convention.py  test_surf_analysis.py  test_surf_analysis_clustering.py  test_surf_analysis_features.py  test_utils.py  test_validation.py
(+147 files in other folders)
