[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gades"  # pip install your-package-name
version = "0.1.0"
description = "Gentlest Ascent Dynamics for Enhanced Sampling"
authors = [
    { name = "Armin Shayesteh Zadeh", email = "arminshzd@gmail.com"}
    { name = "Siddarth Achar", email = ""}
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "scipy",
    "jax",
    "openmm",
    "joblib"
]